--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .navbar-toggle{
-    background-color:#FFF;
+    background-color:#fff;
     background-image: none;
     border: 1px solid transparent;
 }
